--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,94 @@
   font-family: Georgia;
 }
 
+.hamburger-desktop {
+  display: none;
+  position: fixed;
+  display: none;
+}
+
+#sideNav {
+  width: 250px;
+  height: 100vh;
+  position: fixed;
+  right: -250px;
+  top: 0;
+  z-index: 2;
+  transition: 0.5s;
+  background-image: linear-gradient(to bottom, #c4c4c4, rgba(255, 255, 255, 0.098));
+}
+
+#sideNav li:hover {
+  transition: all 0.5s ease;
+  color: #1b1b1b;
+}
+
+nav ul li, nav ul li a {
+  color: black;
+  text-decoration: none;
+  font-size: 0.75rem;
+  padding: 10px;
+  text-transform: uppercase;
+  position: relative;
+  padding: 10px 20px;
+  text-decoration: none;
+  list-style: none;
+}
+
+nav ul li, nav ul li a:hover {
+  cursor: pointer;
+}
+
+nav ul li, nav ul li a,
+nav ul li::after, nav ul li a::after,
+nav ul li::before, nav ul li a::before {
+  transition: 0.3s;
+}
+
+nav ul li::after, nav ul li a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  transition: transform 0.3s;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+nav ul li:hover::after, nav ul li a:hover::after {
+  transform: scaleX(1);
+  transform-origin: right;
+}
+a.nav__link:hover{
+  color: red;
+}
+
+#menubtn {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  top: 20px;
+  border-radius: 3px;
+  z-index: 3;
+  cursor: pointer;
+}
+
+#menubtn img {
+  width: 40px;
+  height: 40px;
+  padding-right: 10px;
+  background-color: transparent;
+  transition: opacity .6s ease;
+}
+
+#menubtn img:hover{
+  opacity: 0.5;
+}
+
+
 #glinkaart{
   height: fit-content;
   padding-top: 100px;
@@ -136,7 +224,6 @@
   text-align: center;
   background: rgb(255, 255, 255);
   padding: 70px 50px;
-  background: url(images/taniecsiedlce.jpg) center center;
   background-size: cover;
   background-position: center;
   padding-bottom: 90px;
@@ -227,20 +314,8 @@ footer{
   background-color: #1b1b1b;
 }
 
-footer ul{
-  list-style: none;
-  margin:  auto;
+#compName, .footer__year{
   color: aliceblue;
-  margin-bottom: 0;
-}
-
-footer ul a{
-  text-decoration: none;
-  color: azure;
-}
-
-footer ul a:hover{
-  color:brown;
 }
 
 #pricing{
@@ -248,7 +323,6 @@ footer ul a:hover{
   margin-bottom: 100px;
 
 }
-
 
 #details{
   padding-top: 100px;
@@ -391,4 +465,55 @@ form .icons a{
     display: none;
   }
 
+}
+
+@media(max-width:997px){
+  nav.nav.nav-desktop {
+    display: none;
+  }
+}
+@media(min-width:997px){
+  .nav {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: 1em;
+  }
+  .nav-desktop {
+    display: block;
+    color: red;
+  }
+  .nav__link {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    text-transform: uppercase;
+    position: relative;
+    padding: 10px 20px;
+    text-decoration: none;
+  }
+  .nav__link:hover {
+    cursor: pointer;
+  }
+  .nav .link,
+  .nav .link::after,
+  .nav .link::before {
+    transition: 0.3s;
+  }
+  .nav__link::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background-color: red;
+    transition: transform 0.3s;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .nav__link:hover::after {
+    transform: scaleX(1);
+    transform-origin: right;
+  }
 }
