--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,19 @@
     font-family: Georgia;
 }
 
+body::-webkit-scrollbar {
+    width: 1px;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #0000004d;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: darkred;
+    outline: 5px solid darkred;
+}
+
 .hamburger-desktop {
     display: none;
     position: fixed;
@@ -498,7 +511,7 @@ form .icons a {
     .nav__link {
         color: black;
         text-decoration: none;
-        font-size: 15px;
+        font-size: 17px;
         padding: 10px;
         text-transform: uppercase;
         position: relative;
