--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ a.nav__link:hover {
 }
 
 
-#services {
+.services {
     display: flex;
     text-align: center;
     flex-wrap: wrap;
@@ -484,7 +484,7 @@ form .icons a {
         padding: 30px 40px;
     }
 
-    #services > .row {
+    .services > .row {
         display: none;
     }
 
