--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ a.nav__link:hover {
 #glinkaart h1 {
     padding-top: 20px;
     font-size: 3rem;
-    color: black;
+    color: #1b1b1b;
 }
 
 #glinkaart img {
